# GIC_Financial_Intelligence

./: .env.example  .gitignore  README.md  TECHNICAL_ASSESSMENT.md  TECHNICAL_ASSESSMENT.md.tmp  pyproject.toml
config/: settings.yaml
data/synthetic/: bom_data.csv  commodity_prices.csv  macro_indicators.csv  production_inventory.csv  sales_data.csv
docs/: ARCHITECTURE_GUIDE.md  BUILD_ACTIONS.md  EXECUTIVE_INTELLIGENCE_REPORT.md  FULL_ARCHITECTURE_RUN.md  GETTING_STARTED.md  HACKATHON_PLAYBOOK.md  OUTPUT_GUIDE.md
models/: pipeline_results.json
scripts/: _fix_dashboard.py  fetch_data.py  generate_data.py  generate_executive_report.py  hackathon_impact_analysis.py  run_commodity_pipeline.py  run_full_architecture.py  run_pipeline.py  train_models.py
src/: __init__.py  config.py  logging_setup.py
src/analytics/: ffn_analytics.py  market_intelligence.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: forecast.py  health.py  (+2 more)
src/dashboard/: app.py  helpers.py
src/data/: __init__.py  data_loader.py  data_router.py  data_source_protocol.py  feature_engineering.py  polars_pipeline.py  synthetic_generator.py
src/drivers/: __init__.py  capital_drivers.py  cost_drivers.py  financial_model.py  revenue_drivers.py
src/governance/: __init__.py  audit_trail.py  bias_tracking.py  explainability.py
src/models/: __init__.py  backtesting.py  commodity_forecast.py  commodity_forecast_xgboost.py  commodity_scenarios.py  commodity_shock.py  demand_forecast.py  futures_curve.py  hedge_optimizer.py  inventory_risk.py  model_registry.py  price_elasticity.py  regime_detector.py
src/simulation/: __init__.py  monte_carlo.py  scenario_engine.py
tests/: conftest.py  test_commodity_forecast.py  test_data_pipeline.py  test_financial_model.py  test_governance.py  test_simulation.py
(+15 files in other folders)
